--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE html>
 <html>
-     <head>
-          <title>My Website Title</title>
-     </head>
-     <body>
-          Hello .... Dummy Web Server UP and Running !!!! 
-     </body>
+  <head>
+    <title>My Website Title</title>
+  </head>
+  <body>
+    it works! Udagram, Udacity
+  </body>
 </html>
-
